--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
 /hero
 app2.py
+appx.py
 app_try.py
 image-uploader-master.zip
 imageupload-19537-firebase-adminsdk-aa50y-d2df163fae.json
 config.py
+__pycache__
+image-uploader-master
+static
 
 
